doc, add notice to docs/developer/typespec/readme.md (#3131)
* doc, add notice to docs/developer/typespec/readme.md

* Update docs/developer/typespec/readme.md

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>

* review feedback

* update for API on unbranded

---------

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>